--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ nav>a:hover
 #book-table > .booktable2 > div > input ,button
 {
     /* padding: 0 15px; */
-    margin-top: 0;
+    margin-top: 0px;
     display: block;
     width: 100%;
     height: 45px;
