--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ nav>a:hover
     color: #FFA600;
     top: 12%;
     right: 37%;
+    padding: 0;
     font-size: 60px;
     font-weight: 900;
     text-align: center;
