--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ nav>a
 #contact:hover
 {
     background-color: transparent;
-    color: black;
+    color: orange;
 }
 nav>a:hover
 {
-    color: blue;
+    color: #FFA600;
 }
 
 /* Cover section */
@@ -75,9 +75,10 @@ nav>a:hover
 #cover-sec > .cover-title
 {
     position: absolute;
-    color: aliceblue;
+    color: #FFA600;
     top: 12%;
     right: 37%;
+    padding: 0;
     font-size: 60px;
     font-weight: 900;
     text-align: center;
@@ -92,7 +93,7 @@ nav>a:hover
 {
     text-decoration: none;
     font-size: 14pt;
-    color: aliceblue;
+    color: #FFA600;
     border: 2px solid aliceblue;
     padding: 7px;
     margin: 5px 10px;
@@ -100,7 +101,8 @@ nav>a:hover
 }
 #cover-sec > .cover-link > a:hover
 {
-    background-color: black;
+    background-color: #FFA600;
+    color: white;
 }
 
 /* about us */
@@ -151,25 +153,167 @@ nav>a:hover
 }
 #book-table > .booktable1
 {
-    width: 50%;
+    width: 42%;
     background-color: rgba(0,0,0,0.6);
     color: white;
-    padding: 30px 50px;
+    padding: 10px 50px;
+    font-family: 'Acme', sans-serif;
 }
 #book-table > .booktable1 > h1
 {
     color: red;
-    margin-top: 80px;
-    font-size: 36pt;
-    margin-bottom: 5px;
+    margin-top: 60px;
+    font-size: 40pt;
+    margin-bottom: 10px;
 }
 #book-table > .booktable1 > h2
 {
     padding-top: 0px;
     margin-top: 0px;
     font-size: 28pt;
+    color: red;
 }
 #book-table > .booktable1 > p
 {
     font-size: 14pt;
+    color: #FFA600;
+    text-align: justify;
+}
+#book-table > .booktable1 > li
+{
+    font-size: 14pt;
+    color: #FFA600;
+    list-style: none;
+    margin: 7px;
+}
+#book-table > .booktable2
+{
+    width: 43%;
+    color: white;
+    padding: 30px 50px;
+}
+#book-table > .booktable2 > h2
+{
+    text-align: center;
+    font-size: 28pt;
+    color: red;
+}
+#book-table > .booktable2 > div
+{
+    padding: 0px 15px;
+}
+#book-table > .booktable2 > div > input ,button
+{
+    /* padding: 0 15px; */
+    margin-top: 0px;
+    display: block;
+    width: 100%;
+    height: 45px;
+    background-color: transparent;
+    border-color: #FFA600;
+    color: gray;
+    font-size: 13pt;
+    outline-style: groove;
+    outline-color: #F97F00;
+}
+#book-table > .booktable2 > div > button
+{
+    background-color: #F97F00;
+    color: black;
+    cursor: pointer;
+}
+#book-table > .booktable2 > div > button:hover
+{
+    background-color: #FFA600;
+}
+
+/* Footer */
+footer
+{
+    width: 100%;
+    height: 350px;
+    background-image: url(Media/footer.jfif);
+    background-size: 100%;
+    margin-top: 50px;
+}
+.footer-sec
+{
+    display: flex;
+    width: 100%;
+    height: 350px;
+    background-color: rgba(0,0,0,0.6);
+    color: #FFA600;
+    /* color: white; */
+    font-size: 15pt;
+}
+.footer-sec > .footer-div-mis
+{
+    border: 2px solid #F97F00;
+    width: 350px;
+    height: 290px;
+    margin-left: 100px;
+    margin-top: 20px;
+    padding: 0px 15px;
+    box-shadow: 0px 0px 26px -5px #F97F00;
+}
+.footer-sec > .footer-div-mis > h2
+{
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+.footer-div1
+{
+    margin-right: 60px;
+    margin-left: 100px;
+}
+.footer-div1 > h3
+{
+    margin-bottom: 0px;
+}
+.footer-div2
+{
+    margin-right: 60px;
+}
+.footer-div2 > h3
+{
+    margin-bottom: -9px;
+}
+.footer-div2 > li
+{
+    list-style: none;
+    margin: 13px;
+    margin-left: -3px;
+    margin-bottom: -5px;
+}
+.footer-div2 > li > i
+{
+    color: red;
+    padding: 5px;
+    border: 1px solid #FFA600;
+    background-color: #FFA600;
+    /* border: 1px solid gray;
+    background-color: gray; */
+    margin-right: 15px;
+}
+.footer-div2 > li > a
+{
+    text-decoration: none;
+    color: #FFA600;
+    /* color: white; */
+}
+.footer-div2 > li > a:hover
+{
+    color: blue;
+}
+.footer-div2 > a 
+{
+   font-size: 25pt;
+   margin: -15px 8px;
+   color: #FFA600;
+   /* color: white; */
+}
+.footer-div2 > a:hover
+{
+    color: yellow;
+    /* color: #FFA600; */
 }
